--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,7 +29,7 @@ const goal = 3;
         <a href="/blog/">Blog</a>
 
         <h1>About Me</h1>
-        <h2>... and my new Astro site!</h2>
+        <h2>... and my new Astro site!!!</h2>
 
         <p>
             I am working through Astro's introductory tutorial. This is the
